--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 JWT_SECRET=allMenMustDie
+MONGO_URL="mongodb+srv://garvbhatt2085:jNyk01r3K16Jcg5g@cnotezilla.rlxpdfs.mongodb.net/?retryWrites=true&w=majority"
